# desafio-dio-tdd

./: .env  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
tdd_project/store/: main.py  routers.py
tdd_project/store/controllers/: health.py  product.py
tdd_project/store/core/: exceptions.py
tdd_project/store/db/: mongo.py
tdd_project/store/models/: base.py  product.py
tdd_project/store/schemas/: base.py  product.py
tdd_project/store/usecases/: product.py
tdd_project/tests/: conftest.py  factories.py
tdd_project/tests/controllers/: test_product.py
tdd_project/tests/schemas/: test_product.py
tdd_project/tests/usecases/: test_product.py
